Fix a layout issue in ie10

--- a/src/react/FailureAnalysis/src/js/containers/Header/header.scss
+++ b/src/react/FailureAnalysis/src/js/containers/Header/header.scss
@@ -2,4 +2,8 @@
   padding: .5em 1.5em 0;
   padding-right: 9em;
   margin-bottom: 0;
+  
+  .nav-item {
+    display: inline-block;
+  }
 }
